testdata/baselines/reference/submodule/compiler/jsFileCompilationLetDeclarationOrder.errors.txt
b.js(2,1): error TS2448: Block-scoped variable 'b' used before its declaration.


==== b.js (1 errors) ====
    let a = 10;
    b = 30;
    ~
!!! error TS2448: Block-scoped variable 'b' used before its declaration.
!!! related TS2728 a.ts:1:5: 'b' is declared here.
    
==== a.ts (0 errors) ====
    let b = 30;
    a = 10;
    